Added my projective transform to main

--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -42,6 +42,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import scipy.optimize as so\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "class Camera(object):\n",
     "    def __init__(self):\n",
@@ -71,6 +74,8 @@
     "        pass\n",
     "    \n",
     "    def estimate_pose(self,X_gcp,u_gcp):\n",
+    "        \n",
+    "        \n",
     "        \"\"\"\n",
     "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp \n",
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
