Changes to the end

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,9 @@
     "        self.c = np.array([None,None])  # Sensor\n",
     "        \n",
     "    def projective_transform(self,x):\n",
-    "        \n",
+    "        \"\"\"  \n",
+    "        This function performs the projective transform on generalized coordinates in the camera reference frame.\n",
+    "        \"\"\"\n",
     "        focal = self.f\n",
     "        sensor = self.c\n",
     "        \n",
@@ -29,10 +31,6 @@
     "        \n",
     "        return np.array([pu,pv])\n",
     "      \n",
-    "    \n",
-    "        \"\"\"  \n",
-    "        This function performs the projective transform on generalized coordinates in the camera reference frame.\n",
-    "        \"\"\"\n",
     "    \n",
     "    def rotational_transform(self,X):\n",
     "        \"\"\"  \n",
@@ -57,6 +55,9 @@
     "        return C @ pts\n",
     "    \n",
     "    def estimate_pose(self,X_gcp,u_gcp):\n",
+    "        \n",
+    "        def residual():\n",
+    "            return X_gcp[0:2] - u_gcp\n",
     "        \"\"\"\n",
     "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp \n",
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
