Adding changes, and few suggested bug fixes

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.optimize as so\n",
     "\n",
     "class Camera(object):\n",
     "    def __init__(self):\n",
@@ -48,22 +50,59 @@
     "        r_pitch = np.array([[1, 0, 0], [0, np.cos(pitch), np.sin(pitch)], [0, -1*np.sin(pitch), np.cos(pitch)]])\n",
     "        r_yaw = np.array([[np.cos(yaw), -1*np.sin(yaw), 0, 0], [np.sin(yaw), np.cos(yaw), 0, 0], [0, 0, 1, 0]])\n",
     "\n",
-    "        T = np.array([[1, 0, 0, -cam_x], [0, 1, 0, -cam_y[1]], [0, 0, 1, -cam_z[2]], [0, 0, 0, 1]])\n",
+    "        T = np.array([[1, 0, 0, -cam_x], [0, 1, 0, -cam_y], [0, 0, 1, -cam_z], [0, 0, 0, 1]])\n",
     "\n",
     "        C = r_axis @ r_roll @ r_pitch @ r_yaw @ T\n",
-    "\n",
+    "        \n",
+    "        # pts is not defined, should it be [cam_x, cam_y, cam_z, 1]?\n",
+    "        #pts = np.array([cam_x,cam_y,cam_z,1])\n",
+    "        \n",
     "        return C @ pts\n",
     "    \n",
     "    def estimate_pose(self,X_gcp,u_gcp):\n",
     "        \n",
-    "        def residual():\n",
-    "            return X_gcp[0:2] - u_gcp\n",
+    "        def residual(X_gcp,u_gcp):\n",
+    "            return projective_transform(X_gcp) - u_gcp\n",
+    "        \n",
+    "        # Initial guess of X_gcp\n",
+    "        p_0 = np.array([0,0,0,0,0])\n",
+    "        \n",
+    "        # Minimize X_gcp\n",
+    "        p_opt = so.least_squares(residual, p_0, method='lm',args=(X_gcp,u_gcp))['X_gcp']\n",
+    "        \n",
     "        \"\"\"\n",
     "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp \n",
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
     "        \"\"\"\n",
     "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the camera and it's attributes from .exif file\n",
+    "myCam = Camera()\n",
+    "#Fixme!!\n",
+    "#myCam.f = 1000\n",
+    "#myCam.c = np.array([2000.,1000.])\n",
+    "\n",
+    "\n",
+    "# Read in gcp's from file\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Project the image with gcp's labeled by optimizing X_gcp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
