--- a/main.ipynb
+++ b/main.ipynb
@@ -79,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['u,v,323479,4306481,182,Top', 'of', 'Washington', 'Memorial']\n",
-      "['u,v,323024,4306503,3,Bottom', 'of', 'fountain']\n",
-      "['u,v,324286,4306580,37,Round', 'dome', 'in', 'background', '-', 'Natural', 'History', 'Museum']\n",
-      "['u,v,324164,4306990,85,Point', 'of', 'tall', 'building', 'in', 'background', 'left']\n",
-      "['u,v,323017,4306515,22,Top', 'of', 'flag', 'pole', 'in', 'left', 'of', 'picture', 'frame']\n"
+      "['u', 'v', '323479', '4306481', '182', 'Top of Washington Memorial']\n",
+      "['u', 'v', '323024', '4306503', '3', 'Bottom of fountain']\n",
+      "['u', 'v', '324286', '4306580', '37', 'Round dome in background - Natural History Museum']\n",
+      "['u', 'v', '324164', '4306990', '85', 'Point of tall building in background left']\n",
+      "['u', 'v', '323017', '4306515', '22', 'Top of flag pole in left of picture frame']\n"
      ]
     }
    ],
@@ -105,7 +105,11 @@
     "# Read in gcp's from file\n",
     "f = open('image_coordinates.txt', 'r')\n",
     "for line in f:\n",
+    "    # Remove newline characters\n",
+    "    line = line.replace(\"\\n\", \"\")\n",
+    "    # Delimit by comma\n",
     "    line = line.split(',')\n",
+    "   \n",
     "    print(line)\n",
     "\n",
     "\n",
