--- a/project1_solution.ipynb
+++ b/project1_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,23 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.71425399e+05  5.19057822e+06  8.52977587e+03 -1.38352391e+00\n",
-      "  6.25214408e+00 -4.38967905e-01]\n"
+      "10442.666666666668\n",
+      "[ 2.65096529e+05  5.19666281e+06 -5.73036778e+03 -9.19381176e-01\n",
+      "  6.63939700e-01  3.79544470e-01]\n"
      ]
     }
    ],
    "source": [
-    "focal_length = 2448.0\n",
-    "sensor_y = 2448\n",
-    "sensor_x = 3264\n",
-    "pose = [270000, 5293938, 1000, 0, 0, 0]\n",
+    "f_length = 1.6 * 55 # from canon.com\n",
+    "img_width = 4272\n",
+    "img_height = 2848\n",
+    "\n",
+    "focal_length = f_length/36*img_width\n",
+    "print(focal_length)\n",
+    "sensor_y = img_height\n",
+    "sensor_x = img_width\n",
+    "pose = [273000, 5293938, 985, 0, 0, 0]\n",
     "\n",
     "coords = np.loadtxt('coordinates.txt', delimiter=',')\n",
     "\n",
@@ -112,7 +118,7 @@
     "c = Camera(focal_length=focal_length, sensor_x=sensor_x, sensor_y=sensor_y, pose=pose)\n",
     "\n",
     "p = c.estimate_pose(X_gcp, u_gcp)\n",
-    "print(p)\n"
+    "print(p)"
    ]
   },
   {
@@ -139,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
