New coordinate. Still not a great estimate

--- a/project1_solution.ipynb
+++ b/project1_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,29 +86,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10442.666666666668\n",
-      "[ 2.65096529e+05  5.19666281e+06 -5.73036778e+03 -9.19381176e-01\n",
-      "  6.63939700e-01  3.79544470e-01]\n"
+      "[ 2.96318787e+05  5.19328489e+06  1.54825466e+04 -1.13688266e+00\n",
+      " -2.11036358e+00  2.84897143e+00]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "f_length = 1.6 * 55 # from canon.com\n",
+    "\n",
     "img_width = 4272\n",
     "img_height = 2848\n",
-    "\n",
     "focal_length = f_length/36*img_width\n",
-    "print(focal_length)\n",
+    "\n",
     "sensor_y = img_height\n",
     "sensor_x = img_width\n",
-    "pose = [273000, 5293938, 985, 0, 0, 0]\n",
+    "pose = [272998, 5103938, 1000, 0, 0, 0]\n",
+    "\n",
+    "focal_length_ = (55 / 22.2)*4272 # from canon\n",
     "\n",
     "coords = np.loadtxt('coordinates.txt', delimiter=',')\n",
     "\n",
