--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,10 +35,12 @@
     "        return np.array([pu,pv])\n",
     "      \n",
     "    \n",
-    "    def rotational_transform(self,X):\n",
+    "    def rotational_transform(self,X,pts):\n",
     "        \"\"\"  \n",
     "        This function performs the translation and rotation from world coordinates into generalized camera coordinates.\n",
     "        \"\"\"\n",
+    "        \n",
+    "        \n",
     "        cam_x = X[0]\n",
     "        cam_y = X[1]\n",
     "        cam_z = X[2]\n",
@@ -51,12 +53,9 @@
     "        r_pitch = np.array([[1, 0, 0], [0, np.cos(pitch), np.sin(pitch)], [0, -1*np.sin(pitch), np.cos(pitch)]])\n",
     "        r_yaw = np.array([[np.cos(yaw), -1*np.sin(yaw), 0, 0], [np.sin(yaw), np.cos(yaw), 0, 0], [0, 0, 1, 0]])\n",
     "\n",
-    "        T = np.array([[1, 0, 0, -cam_x], [0, 1, 0, -cam_y], [0, 0, 1, -cam_z], [0, 0, 0, 1]])\n",
+    "        T = np.array([[1, 0, 0, -cam_x, [0, 1, 0, -cam_y], [0, 0, 1, -cam_z], [0, 0, 0, 1]])\n",
     "\n",
     "        C = r_axis @ r_roll @ r_pitch @ r_yaw @ T\n",
-    "        \n",
-    "        # pts is not defined, should it be [cam_x, cam_y, cam_z, 1]?\n",
-    "        #pts = np.array([cam_x,cam_y,cam_z,1])\n",
     "        \n",
     "        return C @ pts\n",
     "    \n",
@@ -71,6 +70,8 @@
     "        # Minimize X_gcp\n",
     "        p_opt = so.least_squares(residual, p_0, method='lm',args=(X_gcp,u_gcp))['X_gcp']\n",
     "        \n",
+    "        self.p = p_opt\n",
+    "        \n",
     "        \"\"\"\n",
     "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp \n",
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
@@ -80,29 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['u', 'v', '323479', '4306481', '182', 'Top of Washington Memorial']\n",
-      "['u', 'v', '323024', '4306503', '3', 'Bottom of fountain']\n",
-      "['u', 'v', '324286', '4306580', '37', 'Round dome in background - Natural History Museum']\n",
-      "['u', 'v', '324164', '4306990', '85', 'Point of tall building in background left']\n",
-      "['u', 'v', '323017', '4306515', '22', 'Top of flag pole in left of picture frame']\n"
+      "['323479', '4306481', '182']\n",
+      "['323024', '4306503', '3']\n",
+      "['324286', '4306580', '37']\n",
+      "['324164', '4306990', '85']\n",
+      "['323017', '4306515', '22']\n"
      ]
     }
    ],
    "source": [
     "# Initialize the camera and it's attributes from .exif file\n",
     "myCam = Camera()\n",
-    "#Fixme!!\n",
-    "#myCam.f = 1000\n",
-    "#myCam.c = np.array([2000.,1000.])\n",
+    "#GOOD!\n",
+    "myCam.f = (28/36)*3024 # Focal length\n",
+    "myCam.c = np.array([4032.,3024.]) # Sensor size\n",
     "\n",
+    "#Test projective transform function\n",
+    "#print(myCam.projective_transform(np.array([1,1,1])))\n",
     "\n",
+    "# Test rotational transform\n",
+    "gcps = []\n",
     "# Read in gcp's from file\n",
     "f = open('image_coordinates.txt', 'r')\n",
     "for line in f:\n",
@@ -110,10 +115,23 @@
     "    line = line.replace(\"\\n\", \"\")\n",
     "    # Delimit by comma\n",
     "    line = line.split(',')\n",
-    "   \n",
-    "    print(line)\n",
+    "    gcps.append(line)\n",
     "\n",
-    "\n",
+    "# Estimate pose with gcp's\n",
+    "#print(gcps)\n",
+    "for gcp in gcps:\n",
+    "    pts = gcp[2:5]\n",
+    "    print(pts)\n",
+    "    # Rotation\n",
+    "    # Need params X and pts\n",
+    "    X_gcp = myCam.rotational_transform(np.array([0,0,0,0,0,0]),pts)\n",
+    "    \n",
+    "    \n",
+    "    # Projective Transform, Estimate pose\n",
+    "    u_gcp = gcp[0:2]\n",
+    "    \n",
+    "    #myCam.estimate_pose(X_gcp, u_gcp)\n",
+    "    \n",
     "# Project the image with gcp's labeled by optimizing X_gcp\n"
    ]
   },
@@ -161,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
