Adding finished project

--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -42,18 +42,20 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy.optimize as so\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import matplotlib.image as mpimg\n",
+    "import scipy.optimize as so\n",
     "\n",
     "class Camera(object):\n",
     "    def __init__(self):\n",
     "        self.p = None                   # Pose\n",
     "        self.f = None                   # Focal Length in Pixels\n",
-    "        self.c = np.array([None,None])  #\n",
+    "        self.c = np.array([None,None])  # Sensor\n",
     "        \n",
     "    def projective_transform(self,x):\n",
-    "        \n",
+    "        \"\"\"  \n",
+    "        This function performs the projective transform on generalized coordinates in the camera reference frame.\n",
+    "        \"\"\"\n",
     "        focal = self.f\n",
     "        sensor = self.c\n",
     "        \n",
@@ -65,13 +67,42 @@
     "        pu = gcx*focal + sensor[0]/2.\n",
     "        pv = gcy*focal + sensor[1]/2.\n",
     "        \n",
-    "        pass\n",
+    "        return np.array([pu,pv])\n",
+    "      \n",
     "    \n",
-    "    def rotational_transform(self,X):\n",
+    "    def rotational_transform(self,X,pts):\n",
     "        \"\"\"  \n",
     "        This function performs the translation and rotation from world coordinates into generalized camera coordinates.\n",
     "        \"\"\"\n",
-    "        pass\n",
+    "        \n",
+    "        \n",
+    "        cam_x = X[0]\n",
+    "        cam_y = X[1]\n",
+    "        cam_z = X[2]\n",
+    "        roll = X[3]\n",
+    "        pitch = X[4]\n",
+    "        yaw = X[5]\n",
+    "        \n",
+    "        r_axis = np.array([[1, 0, 0], [0, 0,-1], [0, 1, 0]])\n",
+    "        r_roll = np.array([[np.cos(roll), 0, -1*np.sin(roll)], [0, 1, 0], [np.sin(roll), 0, np.cos(roll)]])\n",
+    "        r_pitch = np.array([[1, 0, 0], [0, np.cos(pitch), np.sin(pitch)], [0, -1*np.sin(pitch), np.cos(pitch)]])\n",
+    "        r_yaw = np.array([[np.cos(yaw), -1*np.sin(yaw), 0, 0], [np.sin(yaw), np.cos(yaw), 0, 0], [0, 0, 1, 0]])\n",
+    "\n",
+    "        T = np.array([[1, 0, 0, -cam_x],[0, 1, 0, -cam_y], [0, 0, 1, -cam_z], [0, 0, 0, 1]])\n",
+    "        \n",
+    "        '''print(np.shape(r_axis))\n",
+    "        print(np.shape(r_roll))\n",
+    "        print(np.shape(r_pitch))\n",
+    "        print(np.shape(r_yaw))\n",
+    "        print(np.shape(T))\n",
+    "        print(T)'''\n",
+    "        \n",
+    "        \n",
+    "        C = r_axis @ r_roll @ r_pitch @ r_yaw @ T\n",
+    "        #print(C)\n",
+    "        #print(pts)\n",
+    "        \n",
+    "        return C @ pts\n",
     "    \n",
     "    def estimate_pose(self,X_gcp,u_gcp):\n",
     "        \n",
