--- a/project1_bonus.ipynb
+++ b/project1_bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,20 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pose estimated from gcp 1: [2.72735188e+05 5.19395746e+06 1.04762663e+03 1.48064428e+00\n",
-      " 2.78409403e-01 3.15208992e+00]\n",
+      "pose estimated from gcp 1: [2.72735198e+05 5.19395745e+06 1.04764910e+03 1.48067511e+00\n",
+      " 2.78576743e-01 3.15407517e+00]\n",
       "\n",
-      "pose estimated from gcp 1: [2.72557776e+05 5.19393114e+06 1.03036815e+03 1.90143334e+02\n",
-      " 1.55085373e+00 1.91148362e+02]\n",
+      "pose estimated from gcp 1: [2.72557604e+05 5.19393093e+06 1.03205593e+03 2.84411119e+02\n",
+      " 1.53909151e+00 2.85108707e+02]\n",
       "\n",
-      " Predicted center of clock tower: [2.72558091e+05 5.19393421e+06 9.97955402e+02]\n"
+      " Predicted center of clock tower: [2.72558355e+05 5.19393378e+06 9.98084621e+02]\n"
      ]
     }
    ],
@@ -147,11 +147,10 @@
     "focal_length = (55 / 22.2) * 4272 # from canon\n",
     "coords_1 = np.loadtxt(\"gcp_stereo_1.txt\", delimiter=',')\n",
     "coords_2 = np.loadtxt(\"gcp_stereo_2.txt\", delimiter=',')\n",
-    "pose_1 = [273171, 5193938, 950, 1, 1, 1]\n",
-    "pose_2 = [273131, 5101992, 950, 0.5, np.pi/2, 0]\n",
+    "pose_1 = [273171, 5193938, 900, 1, 1, 1]\n",
+    "pose_2 = [273131, 5101992, 900, 0.5, np.pi/2, 0]\n",
     "u_gcp_1 = coords_1[:, :2]\n",
     "X_gcp_1 = coords_1[:, 2:]\n",
-    "\n",
     "u_gcp_2 = coords_2[:, :2]\n",
     "X_gcp_2 = coords_2[:, 2:]\n",
     "\n",
@@ -161,6 +160,7 @@
     "            sensor_y=sensor_y, pose=pose_2)\n",
     "p1 = c1.estimate_pose(X_gcp_1, u_gcp_1)\n",
     "p2 = c2.estimate_pose(X_gcp_2, u_gcp_2)\n",
+    "\n",
     "print(\"pose estimated from gcp 1:\", p1)\n",
     "print(\"\\npose estimated from gcp 1:\", p2)\n",
     "\n",
@@ -175,11 +175,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This is ok. Elevation is missing by ~20m. That makes sense given by the pose estimation\n",
+    "is off by ~20m as well."
+   ]
   }
  ],
  "metadata": {
