--- a/project1_solution.ipynb
+++ b/project1_solution.ipynb
@@ -100,7 +100,6 @@
     }
    ],
    "source": [
-    "\n",
     "f_length = 1.6 * 55 # from canon.com\n",
     "\n",
     "img_width = 4272\n",
@@ -157,17 +156,15 @@
     "X = coords[:, 2:]\n",
     "Xt = c.rotational_transform(X)\n",
     "u_c, v_c = c.projective_transform(Xt)\n",
-    "u_c = np.reshape(u_c, (u_c.shape[1], 1))\n",
+    "u_c = np.reshape(u_c, (u_c.shape[1], 1)) # u_c was an array of arrays\n",
     "v_c = np.reshape(v_c, (v_c.shape[1], 1))\n",
-    "\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
     "plt.imshow(im)\n",
     "plt.plot(u, v, 'r.', ms=10)\n",
     "plt.plot(u_c, v_c,'b.', ms=10, label='prediction')\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
