--- a/project1_bonus.ipynb
+++ b/project1_bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,9 @@
       "pose estimated from gcp 1: [2.72557604e+05 5.19393093e+06 1.03205593e+03 2.84411119e+02\n",
       " 1.53909151e+00 2.85108707e+02]\n",
       "\n",
-      " Predicted center of clock tower: [2.72558355e+05 5.19393378e+06 9.98084621e+02]\n"
+      " Predicted center of clock tower [1]: [2.72558355e+05 5.19393378e+06 9.98084621e+02]\n",
+      "\n",
+      " Predicted center of clock tower [2]: [2.72558309e+05 5.19393380e+06 9.98518681e+02]\n"
      ]
     }
    ],
@@ -166,21 +168,31 @@
     "\n",
     "uv =  np.array([[2018.9675324675327, 1295.0324675324675], \n",
     "               [1202.3051948051948, 1219.5259740259739]])\n",
+    "uv2 = np.array([[2013.3159, 1269.1184], [1199.59303, 1198.185]]) # another set of coords\n",
     "# meter vector: the E, N, Elev\n",
     "# to minimize: The difference between the predicted u, v values and \n",
     "# the known camera u, v for a given X, Y, z\n",
     "guess = np.array([270000, 5197990, 1010])\n",
-    "p = sfm(c1, c2, guess, uv)\n",
-    "print(\"\\n Predicted center of clock tower:\",  p)"
+    "p_1 = sfm(c1, c2, guess, uv)\n",
+    "print(\"\\n Predicted center of clock tower [1]:\",  p_1)\n",
+    "p_2 = sfm(c1, c2, guess, uv2)\n",
+    "print(\"\\n Predicted center of clock tower [2]:\",  p_2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is ok. Elevation is missing by ~20m. That makes sense given by the pose estimation\n",
-    "is off by ~20m as well."
+    "This is ok. Elevation is missing by ~10m. That makes sense given by the pose estimation\n",
+    "is off by a bit well."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
