--- a/project1_solution.ipynb
+++ b/project1_solution.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,8 +100,7 @@
     }
    ],
    "source": [
-    "f_length = 1.6 * 55 # from canon.com\n",
-    "\n",
+    "f_length = 1.6*55\n",
     "img_width = 4272\n",
     "img_height = 2848\n",
     "focal_length = f_length/36*img_width\n",
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
